fix(hero): adjust padding for better spacing consistency

--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -2,7 +2,7 @@
 @use "../../../styles/mixins" as *;
 
 .hero {
-  @include section-padding;
+  @include hero-padding;
 
   &__title {
     @include hero-title;
