--- a/src/app/components/professional-journey/professional-journey.component.scss
+++ b/src/app/components/professional-journey/professional-journey.component.scss
@@ -9,7 +9,7 @@
   }
 
   .subsection-title {
-    @include subsection-title(left);
+    @include subsection-title;
   }
 
   .education__grid,
