--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,6 +11,6 @@ $color-text-light: #ffffff;
 $color-border: #e0e0e0;
 
 // 📐 Spacing
-$section-padding-top: 8rem;
-$section-padding-bottom: 8rem;
+$section-padding-top: 9rem;
+$section-padding-bottom: 12rem;
 $heading-margin-bottom: 2.5rem;
